# csp-slant-puzzle-solver

./: README.md  pyproject.toml  slant_solver_csp.py
puzzles/: easy1.txt  easy2.txt  easy3.txt  easy4.txt  easy5.txt  hard1.txt  hard2.txt  hard3.txt  hard4.txt  hard5.txt  normal1.txt  normal2.txt  normal3.txt  normal4.txt  normal5.txt  test1.txt  test2.txt
